# cpp_scratchpad_old

./: A.cpp  A.h  B.cpp  B.h  Command.cpp  Command.h  Flywieght.cpp  Flywieght.h  ListElement.h  Mem_mapped_file.h  Observer.cpp  Observer.h  Prototype.cpp  Prototype.h  README.md  Simple.cpp  Simple.h  TestClass.cpp  TestClass.h  Token_stream.cpp  Token_stream.h  TreeNode.h  _allocator.h  _vector1.h  add_two_numbers.cpp  allocator.h  any_of_test.cpp  are_they_the_same.cpp  array_resize.cpp  ball_upwards.cpp  base_derived.cpp  base_path.cpp  basic_pthreads.cpp  binary_gap.cpp  boost_lambda.cpp  boost_lexical.cpp  calculating_with_dictionaries.cpp  cat1.cpp  cat2.cpp  change_making_problem.cpp  (+178 more)
2d_paint_gl/: 2dpainting.pro  CMakeLists.txt  glwidget.cpp  glwidget.h  helper.cpp  helper.h  main.cpp  widget.cpp  widget.h  window.cpp  window.h
absolute_cpp/: CMakeLists.txt  abs_cpp_1_main.cpp  self_test_p23.cpp  sizes.cpp
absolute_cpp/ch_3/: CMakeLists.txt  ex_1.cpp  ex_2.cpp  ex_3.cpp
abstract_factory/: Door.cpp  Door.h  MapSite.h  Maze.cpp  Maze.h  MazeFactory.cpp  MazeFactory.h  MazeGame.cpp  MazeGame.h  Point.cpp  Point.h  Room.cpp  Room.h  Shape.h  Wall.h
beastit_io/: Event_emitter.h  Event_handlers.h  Handler.h  client.h
boost_asio/echo/: CMakeLists.txt  async_tcp_echo_server.cpp  async_udp_echo_server.cpp  blocking_udp_echo_client.cpp  blocking_udp_echo_server.cpp
boost_asio/http/: CMakeLists.txt  connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  header.h  main.cpp  mime_types.cpp  mime_types.h  reply.cpp  reply.h  request.h  request_handler.cpp  request_handler.h  request_parser.cpp  request_parser.h  server.cpp  server.h
collected_compiler_learning/: 10-10.cpp  CMakeLists.txt  llvm_toy.cpp  main.cpp
collected_compiler_learning/demo_compiler/: backend.c  grammar_rule_template.c  lex.c  lex.h  main.c  parser.c  parser.h
collected_compiler_learning/expression_parser/: eop_lex_stream.cpp  eop_lex_stream.h  eop_lex_stream_fwd.h  exp_parser.cpp  exp_parser.h  main.cpp
collected_compiler_learning/files/: 10-1.cpp  10-10.cpp  10-11.cpp  10-12.cpp  10-13.cpp  10-14.cpp  10-15.cpp  10-16.cpp  10-17.cpp  10-18.cpp  10-19.cpp  10-2.cpp  10-20.cpp  10-21.cpp  10-22.cpp  10-23.cpp  10-24.cpp  10-25.cpp  10-26.cpp  10-27.cpp  10-3.cpp  10-4.cpp  10-5.cpp  10-6.cpp  10-7.cpp  10-8.cpp  10-9.cpp
collected_compiler_learning/implementing_regular_expressions/: dfa0.c  dfa1.c  nfa.c  regexp-bytecode.c
collected_compiler_learning/input/: basic.c  char_input.cpp  cpp_getline.cpp  get_line.c  gnu_getline.c  simple_line.c  simple_word.c
collected_compiler_learning/misc/: StringTokenizer.h  boost_mmap.cpp  mem_mapping.cpp
collected_compiler_learning/modern_compiler/: input.h  lex.cpp  lex.h  main.cpp
collected_compiler_learning/simple_parser_kerr/: FileMap.h  Precompiled.h  Sample.cpp  Scanner.h  handle.h
collected_compiler_learning/strings/: 4-1.cpp  4-10.cpp  4-11.cpp  4-12.cpp  4-13.cpp  4-14.cpp  4-15.cpp  4-16.cpp  4-17.cpp  4-18.cpp  4-19.cpp  4-2.cpp  4-20.cpp  4-21.cpp  4-22.cpp  4-23.cpp  4-24.cpp  4-25.cpp  4-26.cpp  4-27.cpp  4-28.cpp  4-29.cpp  4-3.cpp  4-30.cpp  4-31.cpp  4-32.cpp  4-33.cpp  4-4.cpp  4-5.cpp  4-6.cpp  4-7.cpp  4-8.cpp  4-9.cpp
cpp_std_lib/: CMakeLists.txt  adjacent_find.cpp  algo1.cpp  algo1old.cpp  all_of2.cpp  any_of.cpp  any_of2.cpp  array.cpp  assoarray1.cpp  copy.cpp  copy1.cpp  copy_backward.cpp  copy_n.cpp  count.cpp  deque.cpp  equal.cpp  fill.cpp  fill_n.cpp  find.cpp  find_end.cpp  find_first_of.cpp  for_each.cpp  generate.cpp  generate_n.cpp  io1.cpp  is_partitioned.cpp  iter_swap.cpp  list1old.cpp  main.cpp  mismatch.cpp  move.cpp  move_backward.cpp  none_of.cpp  partition.cpp  partition_copy.cpp  partition_point.cpp  remove.cpp  replace.cpp  replace_copy.cpp  reverse.cpp  (+15 more)
multiple_inheritance/: CMakeLists.txt  basics.cpp  private.cpp  public.cpp  virtual_base.cpp  virtual_base2.cpp
openglwindow/: CMakeLists.txt  main.cpp  openglwindow.cpp  openglwindow.h  openglwindow.pro  openglwindow.ui
qt_and_clion/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_and_clion.pro
qt_app/: CMakeLists.txt  qt_app  test.txt
qt_app/application/: application.pro  application.qrc  main.cpp  mainwindow.cpp  mainwindow.h
qt_audio_devices/: CMakeLists.txt  audiodevices.cpp  audiodevices.h  audiodevices.pro  audiodevicesbase.ui  main.cpp
qt_audio_engine/: CMakeLists.txt  audioengine.pro
qt_audio_engine/qml/: audioengine.qml  audioengine.qmlproject
qt_audio_engine/qml/content/: MyAudioEngine.qml
qt_audio_input/: CMakeLists.txt  audioinput.cpp  audioinput.h  audioinput.pro  main.cpp
qt_chat/: CMakeLists.txt  chatclient.html  chatserver.cpp  chatserver.h  main.cpp  qt_chat
qt_echo_client/: CMakeLists.txt  echoclient  echoclient.cpp  echoclient.h  main.cpp
qt_hw/: CMakeLists.txt
qt_opengl/bogo/: CMakeLists.txt  main.cpp  myglwidget.cpp  myglwidget.h  myopengl.pro  window.cpp  window.h
qt_opengl/scene_graph/: CMakeLists.txt  main.cpp  main.qml  openglunderqml.pro  openglunderqml.qrc  squircle.cpp  squircle.h
qt_scene_graph/: CMakeLists.txt  MainForm.ui.qml  main.cpp  main.qml  scene_graph.pro  squircle.cpp  squircle.h
qt_torrent/: CMakeLists.txt  addtorrentdialog.cpp  addtorrentdialog.h  bencodeparser.cpp  bencodeparser.h  connectionmanager.cpp  connectionmanager.h  filemanager.cpp  filemanager.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  metainfo.cpp  metainfo.h  peerwireclient.cpp  peerwireclient.h  ratecontroller.cpp  ratecontroller.h  torrent.pro  torrentclient.cpp  torrentclient.h  trackerclient.cpp  trackerclient.h
qt_torrent/forms/: addtorrentform.ui
smart_pointers/: CMakeLists.txt  shared_ptr.cpp  shared_ptr2.cpp  test_unique_ptr.cpp  unique_ptr.cpp  weak_ptr.cpp
subprocess/: CMakeLists.txt  Preexec_fn.h  fork.cpp  spawn.cpp  subprocess.cpp  subprocess.h  system.cpp  windows.cpp
test_regex/: CMakeLists.txt  regex1.cpp  regex2.cpp  regex3.cpp  regex4.cpp  regex5.cpp  regex_exception.h  regex_iter1.cpp  regex_replace1.cpp  regex_token_iter1.cpp  signatures.h
(+337 files in other folders)
