cmake_minimum_required(VERSION 3.6)
project(cpp_std_lib)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z")

add_executable(accumulate accumulate.cpp)
add_executable(adjacent_difference adjacent_difference.cpp)
add_executable(adjacent_find adjacent_find.cpp)
add_executable(all_of all_of.cpp)
add_executable(any_of any_of.cpp)
add_executable(binary_search binary_search.cpp)
add_executable(bsearch bsearch.cpp)
add_executable(clamp clamp.cpp)
add_executable(copy copy.cpp)
add_executable(copy_backward copy_backward.cpp)
add_executable(copy_if copy_if.cpp)
add_executable(copy_n copy_n.cpp)
add_executable(count count.cpp)
add_executable(count_if count_if.cpp)
add_executable(equal equal.cpp)
add_executable(equal_range equal_range.cpp)
add_executable(exclusive_scan exclusive_scan.cpp)
add_executable(fill fill.cpp)
add_executable(fill_n fill_n.cpp)
add_executable(find find.cpp)
add_executable(find_end find_end.cpp)
add_executable(find_first_of find_first_of.cpp)
add_executable(find_if find_if.cpp)
add_executable(find_if_not find_if_not.cpp)
add_executable(for_each for_each.cpp)
add_executable(for_each_n for_each_n.cpp)
add_executable(generate generate.cpp)
add_executable(generate_n generate_n.cpp)
add_executable(includes includes.cpp)
add_executable(inclusive_scan inclusive_scan.cpp)
add_executable(inner_product inner_product.cpp)
add_executable(inplace_merge inplace_merge.cpp)
add_executable(iota iota.cpp)
add_executable(is_heap is_heap.cpp)
add_executable(is_heap_until is_heap_until.cpp)
add_executable(is_partitioned is_partitioned.cpp)
add_executable(is_permutation is_permutation.cpp)
add_executable(is_sorted is_sorted.cpp)
add_executable(is_sorted_until is_sorted_until.cpp)
add_executable(iter_swap iter_swap.cpp)
add_executable(lexicographical_compare lexicographical_compare.cpp)
add_executable(lower_bound lower_bound.cpp)
add_executable(main main.cpp)
add_executable(make_heap make_heap.cpp)
add_executable(max max.cpp)
add_executable(max_element max_element.cpp)
add_executable(merge merge.cpp)
add_executable(min min.cpp)
add_executable(min_element min_element.cpp)
add_executable(minmax minmax.cpp)
add_executable(minmax_element minmax_element.cpp)
add_executable(mismatch mismatch.cpp)
add_executable(move move.cpp)
add_executable(move_backward move_backward.cpp)
add_executable(next_permutation next_permutation.cpp)
add_executable(none_of none_of.cpp)
add_executable(nth_element nth_element.cpp)
add_executable(partial_sort partial_sort.cpp)
add_executable(partial_sort_copy partial_sort_copy.cpp)
add_executable(partial_sum partial_sum.cpp)
add_executable(partition partition.cpp)
add_executable(partition_copy partition_copy.cpp)
add_executable(partition_point partition_point.cpp)
add_executable(pop_heap pop_heap.cpp)
add_executable(prev_permutation prev_permutation.cpp)
add_executable(push_heap push_heap.cpp)
add_executable(qsort qsort.cpp)
add_executable(random_shuffle random_shuffle.cpp)
add_executable(reduce reduce.cpp)
add_executable(remove remove.cpp)
add_executable(remove_if remove_if.cpp)
add_executable(replace replace.cpp)
add_executable(replace_copy replace_copy.cpp)
add_executable(replace_copy_if replace_copy_if.cpp)
add_executable(replace_if replace_if.cpp)
add_executable(reverse reverse.cpp)
add_executable(reverse_copy reverse_copy.cpp)
add_executable(rotate rotate.cpp)
add_executable(rotate_copy rotate_copy.cpp)
add_executable(sample sample.cpp)
add_executable(search search.cpp)
add_executable(search_n search_n.cpp)
add_executable(set_difference set_difference.cpp)
add_executable(set_intersection set_intersection.cpp)
add_executable(set_symmetric_difference set_symmetric_difference.cpp)
add_executable(set_union set_union.cpp)
add_executable(shuffle shuffle.cpp)
add_executable(sort sort.cpp)
add_executable(sort_heap sort_heap.cpp)
add_executable(stable_partition stable_partition.cpp)
add_executable(stable_sort stable_sort.cpp)
add_executable(swap swap.cpp)
add_executable(swap_ranges swap_ranges.cpp)
add_executable(transform transform.cpp)
add_executable(transform_exclusive_scan transform_exclusive_scan.cpp)
add_executable(transform_inclusiv_scan transform_inclusiv_scan.cpp)
add_executable(transform_reduce transform_reduce.cpp)
add_executable(uninitialized_copy uninitialized_copy.cpp)
add_executable(uninitialized_copy_n uninitialized_copy_n.cpp)
add_executable(uninitialized_fill uninitialized_fill.cpp)
add_executable(uninitialized_fill_n uninitialized_fill_n.cpp)
add_executable(uninitialized_move uninitialized_move.cpp)
add_executable(uninitialized_move_n uninitialized_move_n.cpp)
add_executable(unique unique.cpp)
add_executable(unique_copy unique_copy.cpp)
add_executable(upper_bound upper_bound.cpp)


add_executable(array array.cpp)
add_executable(deque deque.cpp)
add_executable(forward_list forward_list.cpp)
add_executable(list list.cpp)
add_executable(map map.cpp)
add_executable(multimap multimap.cpp)
add_executable(multiset multiset.cpp)
add_executable(set set.cpp)
add_executable(string string.cpp)
add_executable(unordered_map unordered_map.cpp)
add_executable(unordered_multimap unordered_multimap.cpp)
add_executable(unordered_multiset unordered_multiset.cpp)
add_executable(unordered_set unordered_set.cpp)
add_executable(vector vector.cpp)

